Картинка работает на windows

--- a/Client/Users/Main/Users.xaml
+++ b/Client/Users/Main/Users.xaml
@@ -6,7 +6,9 @@
 
     <ContentPage.Content>
         <AbsoluteLayout BackgroundColor="{DynamicResource PageBackground}">
-            <Image Source="dotnet_bot.png"
+            <Image 
+                x:Name="ImageUser"
+                Source="dotnet_bot.png"
                    AbsoluteLayout.LayoutFlags="PositionProportional"
                    AbsoluteLayout.LayoutBounds="1, 0, 50, 50" />
 
