--- a/Client/Project/Main/Backup.xaml
+++ b/Client/Project/Main/Backup.xaml
@@ -3,10 +3,40 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Client.Project.Main.Backup"
              Title="Backup">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <StackLayout Grid.Row="0">
+
+            <Grid x:Name="Табличка" WidthRequest="800" HeightRequest="1000">
+                <Button 
+                    x:Name="CounterLog4" 
+                    Text="Резерная копия" 
+                    SemanticProperties.Hint="Counts the number of times you click" 
+                    Clicked="CounterLog4_Clicked" 
+                    VerticalOptions="Start" 
+                    HorizontalOptions="CenterAndExpand" 
+                    HeightRequest="50" 
+                    WidthRequest="320" 
+                    Margin="0,140,0,0" 
+                    Padding="10" />
+
+           
+            </Grid>
+        </StackLayout>
+
+        <Button 
+            Grid.Row="1" 
+            Text="Назад" 
+            Clicked="GoBack" 
+            VerticalOptions="End" 
+            HorizontalOptions="FillAndExpand" 
+            HeightRequest="50" 
+            Padding="10" />
+    </Grid>
+
 </ContentPage>
